Refactor card layout and enhance button functionality
Updated button styles and added a button element.

--- a/index.html
+++ b/index.html
@@ -46,15 +46,23 @@
         }
         .button{
             text-align: center;
-            padding: 7px 9px;
-            border-radius: 9px;
-            background-color: rgb(175, 238, 235);
-            color: blue;
-            font-size: 10px;
-            margin-top: 3px;
-            border: none;
+            
         }
-
+        .button button{
+            padding: 7px 9px;
+            border-radius: 17px;
+            background-color: rgb(200,239,239);
+            color: blue;
+            font-size: 8px;
+            margin-top: 7px;
+            border: none;
+            font-weight:bold;
+            cursor:pointer;
+        }
+         .button button:hover{
+            background-color: #e28f8f;
+            color: rgb(44, 0, 116);
+        }
     </style>
 </head>
 
@@ -63,7 +71,7 @@
 
     <div class="image">
         <img width="188px" src="https://images.pexels.com/photos/3880179/pexels-photo-3880179.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-            alt="">
+            alt="A man on a boat">
     </div>
 
     <div class="capsules">
@@ -74,9 +82,12 @@
         <h2>shobhith</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem aut ut optio maxime tempore, veritatis nobis quod et cum earum.</p>
         </div>
-        <!-- <div class="buttton">Read More</div> -->
-    </div>
+        <div class="button">
+            <button>Read More</button>
+        </div>
+    
     </div>
 </body>
+
 
 </html>
