Change capsule text to uppercase
Updated the card's capsule tags to uppercase for consistency.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 
     <div class="capsules">
-        <span>Nature</span>
+        <span>NATURE</span>
         <span>Lake</span>
     </div>
     <div class="content">
@@ -91,3 +91,4 @@
 
 
 </html>
+
