Fix HTML formatting and update capsule labels

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div class="capsules">
         <span>NATURE</span>
-        <span>Lake</span>
+        <span>LAKE</span>
     </div>
     <div class="content">
         <h2>shobhith</h2>
@@ -91,4 +91,5 @@
 
 
 </html>
+
 
